# picasso-test-task

./: ,env,example  .env  .env.example  .gitignore  .pre-commit-config.yaml  CNAME  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
config/: celery.py  settings.py  urls.py  yasg.py
file/: admin.py  error_message.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
file/migrations/: 0001_initial.py
tests/: test_app.py
